syntax = "proto3";

package package_one;

import "google/protobuf/struct.proto";
import "package_two/struct_two.proto";

message NestedMessage {
    google.protobuf.Struct metadata = 1;
    repeated google.protobuf.Struct items = 2;
    SubMessage nested = 3;
    PackageSubMessage external_nested = 4;
}

message SubMessage {
    google.protobuf.Struct config = 1;
}

message DeepNestedMessage {
    google.protobuf.Struct metadata = 1;
    SubMessage nested = 2;
    message DeepSubMessage {
        google.protobuf.Struct settings = 1;
    }
    DeepSubMessage deep_nested = 3;
}

message SimpleMessage {
    string name = 1;
    int32 value = 2;
}

message SimpleNestedRequest {
    string title = 1;
    google.protobuf.Struct settings = 2;
}

message SimpleNestedResponse {
    string title = 1;
    google.protobuf.Struct settings = 2;
}

message NestedArrayMessage {
    google.protobuf.Struct metadata = 1;
    repeated SubMessage nested_array = 2;
}

service TestService {
    rpc SimpleNested (SimpleNestedRequest) returns (SimpleNestedResponse);
    rpc ProcessNested (NestedMessage) returns (NestedMessage);
    rpc ProcessDeepNested (DeepNestedMessage) returns (DeepNestedMessage);
    rpc ProcessSimple (SimpleMessage) returns (SimpleMessage);
    rpc ProcessNestedArray (NestedArrayMessage) returns (NestedArrayMessage);
}
